# cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: application.rs  commands.rs  config.rs  lib.rs  peer_info.rs
src/commands/: config.rs  genesis.rs  start.rs  version.rs
src/commands/config/: builder.rs
tests/: acceptance.rs
